--- a/Diabetes_Data.ipynb
+++ b/Diabetes_Data.ipynb
@@ -2015,7 +2015,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "61c7a81f",
+   "id": "38e44834",
    "metadata": {},
    "outputs": [
     {
@@ -2037,7 +2037,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4a208a1e",
+   "id": "98386771",
    "metadata": {},
    "outputs": [
     {
@@ -2054,6 +2054,28 @@
    "source": [
     "import sklearn\n",
     "sklearn.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "083a22ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.22.4'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.__version__"
    ]
   }
  ],
